Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/DefaultTargetTypeUse.out
DefaultTargetTypeUse.java:16:1: compiler.err.invalid.repeatable.annotation.incompatible.target: Container, DefaultTargetTypeUse
1 error
